#35631: fix showing multiple seat booking when pressing shift and click seat

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_seatplan.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_seatplan.scss
@@ -8,11 +8,12 @@
 }
 
 .seatplan-calendar{
-	margin:0px;
-	padding: 5px;
+	margin: 0;
+	padding: 5px 0px 5px 5px;
 	height: 231px;
-	width: 279px;
+	width: 290px;
 	clear: both;
+	background:#ffffff;
 	overflow:hidden;
 }
 
